# hangry-river-horse

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  Rocket.toml  appspec.yml
scripts/: start_server  stop_server
src/: api.rs  broadcast.rs  game.rs  main.rs
www/: assert.js  client.css  client.html  client.js  host.css  host.html  host.js  index.html  request.js
www/display/: index.html
