[package]
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
name = "hangry-river-horse"
version = "0.5.0"

[dependencies]
rand = "0.3.15"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ws = "0.7.3"
rocket_derive = { git = "https://github.com/excaliburHisSheath/rocket_derive" }
